added JobsController, Skill Model, SkillsController, Migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcDeveloperContext": "Server=(localdb)\\mssqllocaldb;Database=MvcDeveloperContext-fa66c971-4ceb-4efe-a2a4-3231d47006ed;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
